# lucid

./: alembic.ini  pyproject.toml
.envs/: .env_example
alembic/versions/: 3cf774ab1b3e_init.py  82f4d007bc53_create_post_model.py
src/: database.py  main.py
src/core/: config.py  security.py
src/crud/: post.py  user.py
src/models/: post.py  user.py
src/routers/: auth.py  post.py
src/schemas/: post.py  user.py
